# ga_engine

./: .gitignore  ACADEMIC_DOCUMENTATION_INDEX.md  ARCHITECTURE.md  BATCHED_NTT_IMPLEMENTATION_PLAN.md  BATCHED_NTT_PHASE1_COMPLETE.md  BENCHMARKS.md  BOOTSTRAP_NEXT_STEPS.md  CKKS_MULTIPLICATION_STATUS.md  CLEANUP_COMPLETED.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  CLIFFORD_FHE_COMPLETE.md  CLIFFORD_FHE_PHASE2_STATUS.md  CLIFFORD_FHE_ROADMAP.md  CLIFFORD_FHE_SIMD_DESIGN.md  CLIFFORD_FHE_SIMD_PROGRESS.md  CLIFFORD_FHE_STATUS.md  CLIFFORD_FHE_TESTS.md  CLIFFORD_FHE_TEST_STATUS.md  CLIFFORD_FHE_VERSIONS.md  CLIFFORD_LWE_512_SUCCESS.md  CLIFFORD_LWE_SUMMARY.md  CLIFFORD_LWE_UNIQUE_CAPABILITIES.md  CLIFFORD_LWE_VS_KYBER_FINAL.md  CLIFFORD_LWE_WINS_VS_KYBER.md  COMMANDS.md  COMPLETE_SUMMARY.md  COVERAGE_REPORT.md  CPU_DEMO_INSTRUCTIONS.md  CUDA_ARCHITECTURE_ANALYSIS.md  CUDA_GOLDEN_COMPARE_READY.md  Cargo.toml  DOCUMENTATION_GUIDE.md  DOCUMENTATION_NOW_PAPER_AGNOSTIC.md  ENCRYPTED_GNN_STATUS.md  FEATURE_FLAGS.md  FILES_FOR_EXPERT_REVIEW.md  FINAL_HONEST_ASSESSMENT.md  FIX_SUMMARY.md  FLOATING_POINT_EXPERIMENT.md  (+102 more)
benches/: README.md  bench.rs  block_matrix_2x2.rs  dft_bench.rs  dft_structured_bench.rs  dft_vector_bench.rs  ga_orthogonalization_16d.rs  ga_orthogonalization_4d.rs  ga_orthogonalization_8d.rs  kyber_batch_encryption.rs  lattice_orthogonalization.rs  lattice_orthogonalization_16d.rs  lattice_orthogonalization_4d.rs  lattice_orthogonalization_8d.rs  lll_algorithm.rs  lll_simple.rs  lll_theoretical_analysis.rs  matrix_mult_block_ga.rs  matrix_ndarray_8x8.rs  matrix_subspace_comprehensive.rs  matrix_to_multivector_16x16.rs  matrix_to_multivector_mapping.rs  matrix_vector.rs  matrix_vector_as_sparse_matrix.rs  metal_vs_cpu_benchmark.rs  motor_transform.rs  multivector_2d_vs_matrix_2x2.rs  ntru_block_decomposition_test.rs  ntru_operations_only.rs  ntru_polynomial_multiplication.rs  ntru_scaling_large_n.rs  raw_operation_analysis.rs  reflection_chain.rs  rotor_vs_matrix_rotation.rs  svp_32d.rs  svp_3d.rs  svp_8d.rs  test_minimal.rs
docs/: DIVISION.md  DIVISION_SECURITY.md
examples/: bench_division_comparison.rs  bench_division_cuda_gpu.rs  bench_division_metal_gpu.rs  bench_v4_cuda_geometric_quick.rs  bench_v4_cuda_packing.rs  benchmark_batched_inference.rs  block_matrix_concept.rs  clifford_fhe_basic.rs  clifford_fhe_geometric_product.rs  clifford_lwe_256_barrett.rs  clifford_lwe_256_final.rs  clifford_lwe_256_integer.rs  clifford_lwe_256_lazy.rs  clifford_lwe_256_montgomery.rs  clifford_lwe_256_simd.rs  clifford_lwe_512.rs  compare_metal_cuda_relin.rs  compare_ntt_methods.rs  debug_cuda_division.rs  debug_cuda_mult_atomic.rs  encrypted_3d_classification.rs  encrypted_geometric_product_demo.rs  encrypted_gnn_demo.rs  encrypted_metal_demo.rs  geometric_dl_paper_demo.rs  lattice_crypto_example.rs  lattice_reduction_demo.rs  matrix_multivector_16x16_demo.rs  matrix_multivector_demo.rs  medical_imaging_encrypted.rs  ml_feature_transform.rs  rotate.rs  rotate_cloud.rs  rotate_cloud_opt.rs  structured_matrix_identification.rs  test_10primes.rs  test_40bit_both_methods.rs  test_60bit_both_methods.rs  test_60bit_minimal_ntt.rs  test_all_geometric_operations.rs  (+94 more)
paper/: PAPER_STATUS.md  PAPER_SUMMARY.md  REAL_WORLD_APPLICATIONS_N32.md  candidate_abstract.tex  candidate_introduction.tex  ga_performance_source_analysis.md  matrix_mult_block_ga_SUCCESS.md  ntru_complete_scaling_results.md  ntru_final_scaling_results.md  ntru_operations_only_analysis.md  ntru_scaling_analysis.md  sparse_matrix_hypothesis_analysis.md  why_block_decomposition_fails.md
paper/Author toolkit/: PTA_template.docx
paper/latex/: BIBLIOGRAPHY_NOTES.md  Instructions.tex  PHILOSOPHICAL_TRANSACTIONS_A_CMYK.eps  ga_crypto_ml_paper.tex  ga_crypto_ml_paper_compact.tex  ga_crypto_ml_paper_fixed.tex  references.bib  rstransa.cls
presentation/: MATRIX_MULTIVECTOR_EXECUTIVE_SUMMARY.md  MATRIX_MULTIVECTOR_MAPPING_SLIDES.md  benchmark_methodology.md  benchmark_results.md  concrete_benchmark_results.md  executive_summary_final.md  ga_extensions_analysis.md  ga_matrix_subspace_analysis.md  performance_reality_check.md  presentation_cheat_sheet.md  presentation_outline_final.md  presentation_strategy_final.md  subspace_discovery_summary.md
security_analysis/: NEXT_STEPS.md  README.md  SECURITY_ANALYSIS.md  corrected_security_estimate.py
security_analysis/security_analysis/: estimate_clifford_lwe_security.py  manual_security_estimate.py
src/: barrett.rs  bivector.rs  classical.rs  clifford_ring_int.rs  ga.rs  lazy_reduction.rs  lib.rs  montgomery.rs  multivector.rs  ntt.rs  ntt_clifford_optimized.rs  ntt_mont.rs  ntt_optimized.rs  prelude.rs  rotor.rs  transform.rs  vector.rs
src/clifford_fhe/: canonical_embedding.rs  ckks.rs  ckks_rns.rs  encoding.rs  geometric_nn.rs  geometric_product.rs  geometric_product_rns.rs  keys.rs  keys_rns.rs  mod.rs  operations.rs  params.rs  rns.rs  rotation_keys.rs  slot_encoding.rs
src/clifford_fhe_v1/: automorphisms.rs  canonical_embedding.rs  ckks_rns.rs  ckks_rns.rs.bak  geometric_nn.rs  geometric_product_rns.rs  keys_rns.rs  params.rs  rns.rs  rotation_keys.rs  slot_encoding.rs
src/clifford_fhe_v2/: mod.rs  params.rs
src/clifford_fhe_v3/: mod.rs  params.rs
src/clifford_fhe_v4/: geometric_ops.rs  mod.rs  mult_table.rs  packed_multivector.rs  packing.rs  params.rs
src/kyber/: batch.rs  classical.rs  ga_batch.rs  mod.rs  params.rs  polynomial.rs
src/lattice_reduction/: README.md  ga_lll_pure.rs  ga_lll_rotors.rs
src/medical_imaging/: encrypted_metal.rs  mod.rs
src/nd/: ga.rs  ga4d_optimized.rs  gp.rs  gp_lazy.rs  mod.rs  (+3 more)
tests/: classical_tests.rs  clifford_fhe_integration_tests.rs  ga_tests.rs  nd_gp_tests.rs  nd_multivector_tests.rs  ntru_tests.rs  numerical_checks.rs  test_clifford_operations_isolated.rs  test_geometric_operations.rs  test_geometric_operations_metal.rs  test_q_bits.rs  test_v2_debug_encrypt_decrypt.rs  test_v2_minimal_mult.rs  test_v2_relin_debug.rs  test_v2_rescale_debug.rs  test_v2_vs_v1_mult.rs  transform_tests.rs  vecn_tests.rs  vector_tests.rs
(+76 files in other folders)
