[package]
name = "ga_engine"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
# by default we use f64 and V1 (stable baseline)
default = ["f64", "nd", "v1"]

f32 = []     # compile everything under `nd` with f32
f64 = []     # compile everything under `nd` with f64
nd  = []

# === Clifford FHE Version Selection ===
# V1: Baseline reference implementation (stable, complete, well-tested)
# V2: Optimized implementation (active development, performance-focused)
v1 = []      # Baseline reference (default, stable)
v2 = []      # Optimized version (active development)

# === V2 Backend Selection (only active when v2 is enabled) ===
v2-cpu-optimized = ["v2"]     # NTT + SIMD, no GPU (10-20× speedup)
v2-gpu-cuda = ["v2"]          # CUDA backend (50-100× speedup, requires NVIDIA GPU)
v2-gpu-metal = ["v2"]         # Metal backend (30-50× speedup, requires Apple Silicon)
v2-simd-batched = ["v2"]      # SIMD slot packing (8-16× throughput)

# Combined: all V2 optimizations
v2-full = ["v2", "v2-cpu-optimized", "v2-gpu-cuda", "v2-simd-batched"]

[dependencies]
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
tabwriter       = "1.3"
wide            = "0.7"
ndarray  = { version = "0.15", features = ["blas"] }
blas-src = { version = "0.10", features = ["accelerate"] }
rustfft = "6.1"
rayon = "1.8"
rand = "0.8"
rand_distr = "0.4"  # For Gaussian distribution sampling (FHE)
sha3 = "0.10"  # For SHAKE128/256 (deterministic RNG)
num-bigint = "0.4"  # For arbitrary precision integers (RNS-CKKS with large Q)
num-traits = "0.2"  # For Zero/One traits used with BigInt

[dev-dependencies]
criterion      = { version = "0.4", features = ["html_reports"] }
matrixmultiply = "0.3"
nalgebra       = "0.32"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bench]]
name = "clifford_ring_crypto"
harness = false