[package]
name = "ga_engine"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
# by default we use f64 and V1 (stable baseline)
default = ["f64", "nd", "v1"]

f32 = []     # compile everything under `nd` with f32
f64 = []     # compile everything under `nd` with f64
nd  = []

# === Clifford FHE Version Selection ===
# V1: Baseline reference implementation (stable, complete, well-tested)
# V2: Optimized implementation (active development, performance-focused)
v1 = []      # Baseline reference (default, stable)
v2 = []      # Optimized version (active development)

# === V2 Backend Selection (only active when v2 is enabled) ===
v2-cpu-optimized = ["v2"]     # NTT + Rayon parallelization (30× speedup)
v2-gpu-cuda = ["v2"]          # CUDA backend (50-100× speedup, requires NVIDIA GPU)
v2-gpu-metal = ["v2", "metal", "objc"]  # Metal backend (387× speedup achieved, requires Apple Silicon)
v2-simd-batched = ["v2"]      # SIMD slot packing (8-16× throughput)

# Combined: all V2 optimizations
v2-full = ["v2", "v2-cpu-optimized", "v2-gpu-cuda", "v2-simd-batched"]

# Legacy test features (for old test files)
classical_module_exists = []
transform_module_exists = []
numerical_checks_module_exists = []
vecn_module_exists = []

[dependencies]
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
tabwriter       = "1.3"
wide            = "0.7"
ndarray  = { version = "0.15", features = ["blas"] }
blas-src = { version = "0.10", features = ["accelerate"] }
rustfft = "6.1"
rayon = "1.8"
rand = "0.8"
rand_distr = "0.4"  # For Gaussian distribution sampling (FHE)
sha3 = "0.10"  # For SHAKE128/256 (deterministic RNG)
num-bigint = "0.4"  # For arbitrary precision integers (RNS-CKKS with large Q)
num-traits = "0.2"  # For Zero/One traits used with BigInt

# Metal GPU support (optional, only on macOS with Apple Silicon)
metal = { version = "0.27", optional = true }
objc = { version = "0.2", optional = true }

[dev-dependencies]
criterion      = { version = "0.4", features = ["html_reports"] }
matrixmultiply = "0.3"
nalgebra       = "0.32"
indicatif      = "0.17"  # Progress bars and spinners
colored        = "2.0"   # Terminal colors
unicode-width  = "0.1"   # Better text formatting

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bench]]
name = "clifford_ring_crypto"
harness = false

[[bench]]
name = "v1_vs_v2_benchmark"
harness = false

[[bench]]
name = "v1_core_ops"
harness = false

[[bench]]
name = "v1_geometric_ops"
harness = false

[[bench]]
name = "v2_core_ops"
harness = false

[[bench]]
name = "v2_geometric_ops"
harness = false

[[bench]]
name = "metal_vs_cpu_benchmark"
harness = false